# ProtonDBFinder

./: Cargo.toml  README.md
searchserver/: core.js  index.js  package-lock.json  package.json
src/: main.rs  protondb_core.rs
src/core/: args.rs  fetching.rs  mod.rs  rating.rs
