[package]
name = "protondb"
version = "1.3.0"
edition = "2021"

[dependencies]
exitfailure = "0.5.1"
reqwest = { version = "0.12.4", features = ["json"] }
serde_derive = "1.0.203"
serde_json = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
serde = "1.0.119"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
colored = "2.1.0"
